bug fix for video author section spacing

--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -2063,9 +2063,6 @@ $standard_border_radius: 6px;
     padding-left: 5%;
   }
 
-  .video_page_authour_right_column_user_info_inner_wrapper {
-    width: 50%;
-  }
 
   .inner.profile_page_inner {
     padding-top: 20px;
